# adversarial-QST-

./: .gitignore  ADDING_NEW_ARCHITECTURE.md  FILE_MANIFEST.txt  MATHEMATICAL_MODEL.md  README.md  VALIDATION.md  evaluate.py  pyproject.toml  requirements.txt  train.py
adversarial_qst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: one_qubit.yaml  three_qubit.yaml  two_qubit.yaml
docs/: ADDING_A_MODEL.md  CODE_FLOW.md
first model/: VALIDATION.md  pyproject.toml
first model/configs/: one_qubit.yaml  smoke_one_qubit.yaml  three_qubit.yaml  two_qubit.yaml
first model/qst/: __init__.py  measurements.py  metrics.py  plotting.py
first model/qst/attacks/: __init__.py  frequency_pgd.py
first model/scripts/: make_method_figures.py  sweep_shots.py  train.py
first model/tests/: test_core.py
outputs/one_qubit/: best.pt  history.csv  history.json  last.pt  resolved_config.json  training_summary.json
outputs/three_qubit/: history.csv  history.json  resolved_config.json  training_summary.json
outputs/two_qubit/: best.pt  history.csv  last.pt  (+3 more)
qst/: __init__.py  config.py  data.py  evaluation.py  evaluator.py  losses.py  trainer.py  utils.py
qst_robust/: __init__.py  attacks.py  config.py  dataset.py  losses.py  measurements.py  metrics.py  model.py  quantum.py  utils.py
scripts/: common.py  evaluate.py  evaluate_with_plots.py  generate_dataset.py  inspect_sample.py  run_all.py  smoke_test.py  sweep_alpha_epsilon.py  train.py
tests/: conftest.py  test_attacks.py  test_models.py  test_pipeline.py  test_quantum.py  test_training_step.py
(+88 files in other folders)
