[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-qst"
version = "0.1.0"
description = "Flexible adversarial quantum state tomography for one, two, and three qubits"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "PyYAML>=6.0",
    "torch>=2.2",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["qst*", "scripts*"]
