[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-qst-modular"
version = "0.1.0"
description = "Modular adversarial quantum state tomography for one, two, and three qubits"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["qst*", "scripts*"]
